# MatchEvents

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: base.yaml  yolo_sahi_afa_teste_v3.yaml  yolo_sahi_afa_teste_v4_teams.yaml  yolo_sahi_afa_teste_v5_possession.yaml  yolo_sahi_broadcast_center_00_02.yaml  yolo_sahi_broadcast_center_15_17.yaml  yolo_sahi_broadcast_center_35_37.yaml
data/datasets/football_yolo/: data.yaml
data/interim/: README.md
data/processed/: README.md
docs/: architecture.md
scripts/: run_pipeline.py
src/match_events/analytics/: __init__.py  possession.py
src/match_events/detectors/: __init__.py  base.py  factory.py  yolo_adapter.py
src/match_events/io/: __init__.py  video.py
src/match_events/pipeline/: __init__.py  main.py
src/match_events/postprocessing/: __init__.py  field.py  team.py
src/match_events/tracking/: __init__.py  base.py
src/match_events/visualization/: __init__.py  video_annotator.py
tests/: test_field_region_filter.py  test_imports.py  test_possession_estimator.py  test_team_assigner.py  test_video_reader.py
